# code-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEBASE_PATH_UPDATE.md  DOCKER.md  Dockerfile  MIGRATION_NOTES.md  README.md  README.zh-CN.md  agent.py  config.py  docker-compose.yml  env.example  example_client.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py  workflow.py
templates/: index.html
tools/: __init__.py  apply_code_change.py  code_modifier.py  generate_diff.py  generate_test_commands.py  generate_unittest.py  run_unittest.py
